# portfolio

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.starter.md  README_hero_snippet.md  SECURITY.md  devcontainer.json  eslint.config.js  justfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
projects/04-llm-adapter/: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt
projects/04-llm-adapter-shadow/: .env.example  README.md  demo_shadow.py  pyproject.toml  pytest.ini  requirements.txt
projects/04-llm-adapter-shadow/adapter/: __init__.py
projects/04-llm-adapter-shadow/src/: __init__.py
projects/04-llm-adapter-shadow/tests/: __init__.py  conftest.py  parallel_helpers.py  test_cli_input_formats.py  test_cli_runner_config.py  test_config_accepts_str.py  test_consensus_config_constraints.py  test_consume_cases.py  test_core_shim.py  test_env_example.py  test_err_cases.py  test_metrics_otlp.py  test_metrics_prometheus.py  test_metrics_threadsafe.py  test_no_src_imports.py  test_parallel_exec.py  test_providers.py  test_pyproject_dependencies.py  test_run_metric_schema.py  test_runner_async.py  test_runner_async_failures.py  test_runner_consensus.py  test_runner_modes.py  test_runner_parallel.py  test_runner_sequential.py  test_runner_shared.py  test_runner_sync_invocation.py  test_runner_sync_strategy_metrics.py  test_runners_helpers.py  test_shadow.py  test_shadow_async.py  test_shadow_metrics_schema.py  test_version.py  test_weekly_summary_tool.py
projects/04-llm-adapter-shadow/tools/: consume_cases.py  weekly_summary.py
projects/04-llm-adapter-shadow/yaml/: __init__.pyi
projects/04-llm-adapter/adapter/: __init__.py  cli.py  run_compare.py
projects/04-llm-adapter/data/: runs-metrics.jsonl
projects/04-llm-adapter/docs/: spec_adapter_lab.md  weekly-summary.md
projects/04-llm-adapter/reports/: index.html
projects/04-llm-adapter/tests/: conftest.py  test_adapter_import_shadow_guard.py  test_aggregation_controller_mode.py  test_aggregation_logic.py  test_aggregation_provider_response.py  test_aggregation_selector.py  test_aggregation_selector_components.py  test_aggregation_weighted.py  (+41 more)
(+622 files in other folders)
