[project]
name = "portfolio-llm-adapter-shadow"
version = "0.1.0"
description = "Minimal shadow-execution + error-cases PoC for portfolio"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
llm-adapter = "src.llm_adapter.cli:main"

[tool.pytest.ini_options]
pythonpath = ["projects/04-llm-adapter-shadow"]
addopts = "-q"
