[project]
name = "portfolio-llm-adapter-shadow"
version = "0.1.0"
description = "Legacy-only shadow-execution + error-cases PoC for portfolio"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "google-genai>=0.3",
]
[tool.pytest.ini_options]
pythonpath = ["projects/04-llm-adapter-shadow"]
addopts = "-q"
