[project]
name = "portfolio-llm-adapter-shadow"
version = "0.1.0"
description = "Legacy-only shadow package that omits llm-adapter CLI exposure to avoid script collisions"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "google-genai>=0.3",
]
[tool.pytest.ini_options]
pythonpath = [
    "projects/04-llm-adapter-shadow",
    "projects/04-llm-adapter-shadow/src",
]
addopts = "-q"
