[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-adapter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.21", "openai>=1.30", "pyyaml", "pydantic>=2", "tqdm"]

[project.scripts]
llm-adapter = "adapter.cli:main"
